@@ -386,6 +386,7 @@ class MailList(HTMLFormatter, Deliverer, ListAdmin,
         self.obscure_addresses = mm_cfg.DEFAULT_OBSCURE_ADDRESSES
         self.admin_member_chunksize = mm_cfg.DEFAULT_ADMIN_MEMBER_CHUNKSIZE
         self.administrivia = mm_cfg.DEFAULT_ADMINISTRIVIA
+        self.drop_cc = mm_cfg.DEFAULT_DROP_CC
         self.preferred_language = mm_cfg.DEFAULT_SERVER_LANGUAGE
         self.available_languages = []
         self.include_rfc2369_headers = 1
